# unified-codes

./: .env  .eslintrc.js  .gitignore  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  build_deb_package.sh  codegen.yml  i18n-unused.config.js  jest.config.js  package.json  tsconfig.json
backend/datasource/: Cargo.toml  build.rs
backend/datasource/src/: cynic.rs  database_settings.rs  entity.graphql  gql.rs  graphql.rs  lib.rs  search.graphql
backend/dgraph/: Cargo.toml
backend/dgraph/src/: add_pending_change.rs  client.rs  entities.rs  entity.rs  entity_duplication.rs  gql.rs  lib.rs  link_codes.rs  pending_change.rs  pending_changes.rs  update_pending_change.rs  upsert_entity.rs  upsert_pending_change.rs
backend/dgraph/src/barcode/: barcode.rs  barcodes.rs  delete_barcode.rs  insert_barcode.rs  mod.rs
backend/dgraph/src/configuration/: configuration_items.rs  delete_configuration_item.rs  insert_configuration_item.rs  mod.rs  property_configuration_items.rs  upsert_property_configuration_item.rs
backend/dgraph/src/drug_interaction/: delete_interaction.rs  insert_interaction.rs  interaction.rs  interactions.rs  mod.rs  update_interaction.rs
backend/dgraph/src/drug_interaction_group/: delete_interaction_group.rs  insert_interaction_group.rs  interaction_group.rs  interaction_groups.rs  mod.rs  update_interaction_group.rs
backend/dgraph/src/gs1/: delete_gs1.rs  gs1.rs  gs1s.rs  insert_gs1.rs  mod.rs
backend/graphql/: Cargo.toml  lib.rs  logger.rs  playground.html
backend/graphql/barcode/: Cargo.toml
backend/graphql/barcode/src/: lib.rs
backend/graphql/barcode/src/mutations/: delete.rs  insert.rs  mod.rs
backend/graphql/barcode/src/types/: barcode.rs  inputs.rs  mod.rs
backend/graphql/configuration/: Cargo.toml
backend/graphql/configuration/src/: lib.rs
backend/graphql/configuration/src/mutations/: delete.rs  insert.rs  mod.rs  upsert_property.rs
backend/graphql/configuration/src/types/: configuration_item.rs  inputs.rs  mod.rs  property_configuration_item.rs
backend/graphql/core/: Cargo.toml
backend/graphql/core/src/: generic_filters.rs  lib.rs  simple_generic_errors.rs  standard_graphql_error.rs  test_helpers.rs
backend/graphql/core/src/loader/: audit_log.rs  loader_registry.rs  mod.rs  user.rs  user_permission.rs
backend/graphql/drug_interactions/: Cargo.toml
backend/graphql/drug_interactions/src/: lib.rs
backend/graphql/drug_interactions/src/mutations/: delete_group.rs  delete_interaction.rs  insert.rs  mod.rs  upsert.rs  upsert_group.rs  upsert_interaction.rs
backend/graphql/drug_interactions/src/types/: inputs.rs  interaction.rs  interaction_group.rs  mod.rs
backend/graphql/general/: Cargo.toml
backend/graphql/general/src/: lib.rs
backend/graphql/general/src/queries/: log.rs  login.rs  logout.rs  me.rs  mod.rs  refresh_token.rs  server_settings.rs
backend/graphql/gs1/: Cargo.toml
backend/graphql/gs1/src/: lib.rs
backend/graphql/gs1/src/mutations/: delete.rs  insert.rs  mod.rs
backend/graphql/gs1/src/types/: gs1.rs  inputs.rs  mod.rs
backend/graphql/types/: Cargo.toml
backend/graphql/types/src/types/: log.rs  mod.rs  (+2 more)
backend/graphql/universal_codes/: Cargo.toml
backend/graphql/universal_codes/src/: lib.rs
backend/graphql/user_account/: Cargo.toml
backend/graphql/user_account/src/: lib.rs
backend/graphql_v1/: Cargo.toml  lib.rs  logger.rs  playground.html
backend/graphql_v1/core/: Cargo.toml
backend/graphql_v1/core/src/: lib.rs  standard_graphql_error.rs
backend/graphql_v1/universal_codes/: Cargo.toml
backend/graphql_v1/universal_codes/src/: lib.rs
backend/repository/: Cargo.toml
backend/repository/migrations/2022-05-09-204006_create_user_acccount/: up.sql
backend/repository/migrations/2022-05-16-232438_create_user_permissions/: down.sql  up.sql
backend/repository/migrations/2022-08-02-040700_insert_admin_user/: down.sql  up.sql
backend/repository/migrations/2022-09-02-013232_create_log_table/: up.sql
backend/repository/migrations/2023-01-26-013445_email_queue/: down.sql  up.sql
backend/repository/src/: database_settings.rs  diesel_macros.rs  lib.rs  repository_error.rs  test_db.rs  tests.rs
backend/repository/src/db_diesel/: audit_log.rs  audit_log_row.rs  diesel_schema.rs  email_queue_row.rs  filter_sort_pagination.rs  key_value_store.rs  mod.rs  storage_connection.rs  user_account.rs  user_account_row.rs  user_permission.rs  user_permission_row.rs
backend/repository/src/mock/: mod.rs  user_account.rs  user_permissions.rs
backend/server/: Cargo.toml
backend/server/debian/: notify.service  universal-codes.service  universal_codes.service
backend/server/debian/scripts/: .backup-env  backup.logrotate  backup.sh  crontab  postinst  postrm  preinst  prerm
backend/server/src/: configuration.rs  lib.rs  logging.rs  main.rs  scheduled_tasks.rs  serve_frontend.rs  set_icon.rs  static_files.rs
backend/server/src/middleware/: authentication.rs  mod.rs
backend/service/: Cargo.toml
backend/service/src/: audit_log.rs  auth.rs  auth_data.rs  lib.rs  login.rs  service_provider.rs  settings.rs  static_files.rs  test_utils.rs  token.rs  token_bucket.rs
backend/service/src/barcodes/: delete.rs  mod.rs  upsert.rs
backend/service/src/configuration/: delete.rs  mod.rs  upsert.rs  upsert_property.rs
backend/service/src/datasource/: mod.rs
backend/service/src/dgraph/: mod.rs
backend/service/src/drug_interactions/: delete.rs  delete_interaction.rs  insert.rs  mod.rs  upsert.rs  upsert_group.rs  upsert_interaction.rs
backend/service/src/email/: base.html  enqueue.rs  mod.rs
backend/service/src/gs1/: delete.rs  mod.rs  upsert.rs
backend/service/src/universal_codes/: add_pending_change.rs  approve_pending_change.rs  code_generator.rs  entity_collection.rs  entity_filter.rs  mod.rs  pending_change_collection.rs  properties.rs  reject_pending_change.rs  update_pending_change_body.rs  upsert.rs  upsert_pending_change.rs  validate.rs
backend/service/src/user_account/: create.rs  delete.rs  mod.rs  passwords.rs  permissions.rs  query.rs  update.rs  validate.rs
(+1632 files in other folders)
