[package]
name = "dgraph"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
gql_client = "1.0.7"
util = { path = "../util" }
log = "0.4.14"
rand = "0.8"

[features]
dgraph-tests = []
