[package]
name = "graphql"
version = "0.1.0"
edition = "2018"

[lib]
path = "./lib.rs"

[dependencies]

repository = { path = "../repository" }
service = { path = "../service" }
util = { path = "../util" }
graphql_configuration = { path = "configuration" }
graphql_drug_interactions = { path = "drug_interactions" }
graphql_core = { path = "core" }
graphql_v1_core = { path = "../graphql_v1/core" }
graphql_barcode = { path = "barcode" }
graphql_types = { path = "types" }
graphql_general = { path = "general" }
graphql_user_account = { path = "user_account" }
graphql_universal_codes = { path = "universal_codes" }
graphql_universal_codes_v1 = { path = "../graphql_v1/universal_codes" }


actix-web = { version = "4.0.1", default-features = false, features = [
  "macros",
] }
async-graphql = { version = "3.0.35", features = [
  "dataloader",
  "chrono",
  "log",
] }
async-graphql-actix-web = "3.0.35"
actix-http = "3.3.1"
async-trait = "0.1.30"
serde = "1.0.126"
serde_json = "1.0.66"
tokio = { version = "1.29", features = ["macros"] }
log = "0.4.14"


[dev-dependencies]
actix-rt = "2.6.0"
assert-json-diff = "2.0.1"
