[package]
name = "service"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
dgraph = { path = "../dgraph" }
repository = { path = "../repository" }
util = { path = "../util" }
anyhow = "1.0.44"
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.0.1"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.66"
tokio = "1.29"
lettre = "0.11.1"
rand = "0.8"
tera = "1"
nanohtml2text = "0.1"
flate2 = "1.0.26"
simple-log = { version = "1.6" }

[dev-dependencies]
actix-rt = "2.6.0"

[features]
email-tests = []
dgraph-tests = []
