[package]
name = "graphql_v1_core"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

dgraph = { path = "../../dgraph" }
service = { path = "../../service" }

actix-web = { version = "4.0.1", default-features = false, features = ["macros", "cookies"] }
anymap = "0.12"
async-graphql = { version = "3.0.35", features = ["dataloader", "chrono"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
